ref(input): remove virtual modifiers, improve progress indicator
Standardize TnTInputBase by removing unnecessary virtual modifiers from properties and methods. Update TnTTypeahead to show the progress indicator only when searching, enhancing user experience. The "invalid" CSS class is no longer added based on ErrorMessage, which may affect styling of invalid states.

--- a/NTComponents/Typeahead/TnTTypeahead.razor
+++ b/NTComponents/Typeahead/TnTTypeahead.razor
@@ -34,7 +34,7 @@
 					  SupportingText="@SupportingText"
 					  ErrorMessage="@ErrorMessage"
 					  @ref="_inputBox" />
-		<TnTProgressIndicator Show="@true" ProgressColor="ProgressColor" Size="Size.Small" />
+		<TnTProgressIndicator Show="@_searching" ProgressColor="ProgressColor" Size="Size.Small" />
 	</span>
 	@if (_focused) {
 		<button type="submit" disabled style="display:none" aria-hidden="true" />
