feat(styles): add label top positioning and dual icon grid
Added CSS rule to set .tnt-label top to 0. Introduced new grid layout for elements containing both .tnt-start-icon and .tnt-end-icon, defining grid areas and column sizes for improved alignment.

--- a/NTComponents/Form/TnTInputTextArea.razor.scss
+++ b/NTComponents/Form/TnTInputTextArea.razor.scss
@@ -36,6 +36,10 @@
         margin-top: 6px;
         @include base.tnt-label;
 
+        .tnt-label {
+            top: 0;
+        }
+
 
         &:has(.tnt-start-icon):has(.tnt-end-icon) {
             grid-template-areas: "pad1 start-icon pad2 text pad3 end-icon pad4";
