--- a/NTComponents/Buttons/TnTButton.razor.scss
+++ b/NTComponents/Buttons/TnTButton.razor.scss
@@ -1,4 +1,5 @@
-﻿@use '../Styles/_Variables/_colors.scss' as colors;
+@use '../Styles/_Variables/_colors.scss' as colors;
+@use '../Styles/_Variables/_measurements.scss' as measurements;
 @use '../Styles/_Variables/_textAlignments.scss' as textAlignments;
 @use '../Styles/_Variables/_typescale.scss' as typescale;
 @use '../Styles/_Variables/_interactable.scss' as interactable;
@@ -130,7 +131,7 @@ $on-tint-color: var(--tnt-button-on-tint-color);
 
     &.tnt-size-xs {
         .tnt-small-button-layer {
-            border-radius: 32px / 100%;
+            border-radius: measurements.$tnt-pill-border-radius-xs;
             padding: 0px 12px;
             height: 32px;
             gap: 4px;
@@ -159,7 +160,7 @@ $on-tint-color: var(--tnt-button-on-tint-color);
 
     &.tnt-size-s {
         .tnt-small-button-layer {
-            border-radius: 40px / 100%;
+            border-radius: measurements.$tnt-pill-border-radius-small;
             padding: 0px 16px;
             height: 40px;
             gap: 8px;
@@ -188,7 +189,7 @@ $on-tint-color: var(--tnt-button-on-tint-color);
 
     &.tnt-size-m {
         @include typescale.tnt-typescale(500, 16px, 24px, 0.15px);
-        border-radius: 56px / 100%;
+        border-radius: measurements.$tnt-pill-border-radius-medium;
         padding: 0px 24px;
         height: 56px;
         gap: 8px;
@@ -216,7 +217,7 @@ $on-tint-color: var(--tnt-button-on-tint-color);
 
     &.tnt-size-l {
         @include typescale.tnt-typescale(400, 24px, 32px, 0);
-        border-radius: 96px / 100%;
+        border-radius: measurements.$tnt-pill-border-radius-large;
         padding: 0px 48px;
         height: 96px;
         gap: 12px;
@@ -244,7 +245,7 @@ $on-tint-color: var(--tnt-button-on-tint-color);
 
     &.tnt-size-xl {
         @include typescale.tnt-typescale(400, 32px, 40px, 0);
-        border-radius: 136px / 100%;
+        border-radius: measurements.$tnt-pill-border-radius-xl;
         padding: 0px 64px;
         height: 136px;
         gap: 16px;
