--- a/NTComponents/Typeahead/TnTTypeahead.razor
+++ b/NTComponents/Typeahead/TnTTypeahead.razor
@@ -29,7 +29,7 @@
 					  StartIcon="@MaterialIcon.Search"
 					  Tooltip="@Tooltip"
 					  TooltipIcon="@TooltipIcon"
-					  @onkeydown="SelectOrShiftFocusAsync"
+					  @onkeyup="SelectOrShiftFocusAsync"
 					  SupportingText="@SupportingText"
 					  ErrorMessage="@_displayErrorMessage"
 					  @ref="_inputBox" />
