--- a/NTComponents/Typeahead/TnTTypeahead.razor.scss
+++ b/NTComponents/Typeahead/TnTTypeahead.razor.scss
@@ -16,6 +16,13 @@
 
             label, input {
                 width: 100%;
+            }
+
+            label {
+                margin-top: 6px;
+            }
+
+            input {
                 margin: 0;
             }
 
