feat(markdown-editor): add form validation and UX improvements
TnTMarkdownEditor now supports Blazor form validation via ValueExpression and RenderedHtmlExpression, integrates with EditContext, and displays validation messages. Added SupportingText and OnBlurCallback parameters for enhanced UX and accessibility. SCSS updated for validation/error styling. Demo and tests updated to cover new features.

--- a/LiveTest/LiveTest.Client/Components/MarkdownComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/MarkdownComponent.razor
@@ -1,15 +1,29 @@
-<NTComponents.TnTMarkdownEditor @bind-Value="_value" @bind-RenderedHtml="_markdown" />
+@using NTComponents
 
+<TnTForm Model="Model" OnValidSubmit="HandleValidSubmit" OnInvalidSubmit="HandleInvalidSubmit">
+    <DataAnnotationsValidator />
+    <ValidationSummary />
 
-<NTComponents.TnTRow>
-    @_value
-</NTComponents.TnTRow>
-<NTComponents.TnTRow>
-    @_markdown
-</NTComponents.TnTRow>
-
-
-@code {
-    private string? _value;
-    private MarkupString? _markdown;
-}
+    <TnTCard Appearance="CardAppearance.Outlined">
+        <TnTRow>
+            <TnTColumn S="12">
+                <TnTMarkdownEditor @bind-Value="Model.Value"
+                                  @bind-RenderedHtml="Model.RenderedHtml"
+                                  OnBlurCallback="HandleBlurAsync" />
+            </TnTColumn>
+        </TnTRow>
+        <TnTRow>
+            <TnTColumn S="12">
+                <TnTButton Type="ButtonType.Submit">Submit</TnTButton>
+            </TnTColumn>
+        </TnTRow>
+        <TnTRow>
+            <TnTColumn S="12">
+                <div>@SubmitMessage</div>
+                <div>@BlurMessage</div>
+                <div>Markdown: @Model.Value</div>
+                <div>Rendered HTML: @RenderedHtmlValue</div>
+            </TnTColumn>
+        </TnTRow>
+    </TnTCard>
+</TnTForm>
