--- a/NTComponents/Editors/TnTMarkdownEditor.razor
+++ b/NTComponents/Editors/TnTMarkdownEditor.razor
@@ -2,13 +2,26 @@
 @using NTComponents.Core
 @inherits TnTPageScriptComponent<TnTMarkdownEditor>
 
-<tnt-markdown-editor @attributes="AdditionalAttributes" @ref="Element">
-    <textarea style="display:none;" />
-    @if(!string.IsNullOrWhiteSpace(InitialValue)) {
-    <div class="initial-value" style="display:none">
-        @InitialValue
-    </div>
+<div class="@EditorContainerClass" style="@ElementStyle">
+    <tnt-markdown-editor @attributes="AdditionalAttributes" @ref="Element">
+        <textarea style="display:none;" />
+        @if(!string.IsNullOrWhiteSpace(InitialValue)) {
+        <div class="initial-value" style="display:none">
+            @InitialValue
+        </div>
+        }
+    </tnt-markdown-editor>
+    @if (ShowSupportingText) {
+        <span class="tnt-supporting-text">
+            @if (ValueExpression is not null) {
+                <ValidationMessage For="@ValueExpression" class="tnt-components tnt-validation-message" />
+            }
+            @if (RenderedHtmlExpression is not null) {
+                <ValidationMessage For="@RenderedHtmlExpression" class="tnt-components tnt-validation-message" />
+            }
+            @SupportingText
+        </span>
     }
-</tnt-markdown-editor>
+</div>
 
 @PageScript
